# hypo_assembler_scripts

./: .gitignore  .gitmodules  README.md  build_all.sh  run_all.sh  scan_misjoin.py
evaluation_script/: all_eval.py  eval.py  misassembly.py
misjoin/: CMakeLists.txt  misjoin.cpp
misjoin/libs/htslib-1.9/: bcf_sr_sort.pico  config.status  errmod.pico  hfile_libcurl.pico  hts_os.pico  kstring.pico  md5.pico  tbx.pico  (+4 more)
overlap/: CMakeLists.txt  overlap.cpp  run_overlap.sh
polisher/include/: globalDefs.hpp
polisher/src/: main.cpp
scaffold/: CMakeLists.txt  filter_scaffold.py  run_scaffold.sh  scaffold.cpp
scaffold/libs/htslib-1.9/: bcf_sr_sort.pico  bgzf.pico  bgzip  config.mk  config.status  errmod.pico  faidx.pico  hfile.pico  hfile_gcs.pico  hfile_libcurl.pico  hfile_net.pico  hfile_s3.pico  hts.pico  hts_os.pico  kfunc.pico  knetfile.pico  kstring.pico  md5.pico  multipart.pico  probaln.pico  realn.pico  regidx.pico  sam.pico  synced_bcf_reader.pico  tabix  tbx.pico  textutils.pico  thread_pool.pico  vcf.pico  vcf_sweep.pico  vcfutils.pico
scaffold/libs/htslib-1.9/autom4te.cache/: requests
scaffold/libs/htslib-1.9/cram/: cram_codecs.pico  cram_decode.pico  cram_encode.pico  cram_external.pico  cram_index.pico  cram_io.pico  cram_samtools.pico  cram_stats.pico  files.pico  mFILE.pico  open_trace_file.pico  pooled_alloc.pico  sam_header.pico
scaffold/libs/htslib-1.9/lib/pkgconfig/: htslib.pc
scaffold/libs/htslib-1.9/test/: fieldarith  hfile  sam  test-bcf-sr  test-bcf-translate  test-regidx  test-vcf-api  test-vcf-sweep  test_bgzf  test_realn  test_view
(+38 files in other folders)
